--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,8 @@
-Pillow
-pyautogui
-requests
-wikipedia
-aiohttp
-asyncio
-flask
-paperclip
-keyboard
-pyperclip
+asyncio~=3.4.3
+aiohttp~=3.8.3
+PyAutoGUI~=0.9.53
+wikipedia~=1.4.0
+Pillow~=9.4.0
+pyperclip~=1.8.2
+keyboard~=0.13.5
+Flask~=2.2.2
