--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -1,21 +1,31 @@
-- name: Sphinx to GitHub Pages
-  uses: sphinx-notes/pages@3.0beta
-  on:
+name: Publish Github Pages
+
+on:
   push:
-    branches:
-    - master
-  jobs:
-  build:
-    runs-on: ubuntu-latest
+    branches: [master]
+    paths-ignore:
+      - .github/workflows/gitee-pages.yml
+
+jobs:
+  pages:
+    runs-on: ubuntu-20.04
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
+    permissions:
+      pages: write
+      id-token: write
     steps:
-    - uses: actions/setup-python@v2
-    - uses: actions/checkout@master
+    - run: |
+        sudo locale-gen en_US.UTF-8
+        sudo update-locale
+    - uses: awalsh128/cache-apt-pkgs-action@master
       with:
-        fetch-depth: 0 # otherwise, you will failed to push refs to dest repo
-    - name: Build and Commit
-      uses: sphinx-notes/pages@v2
-    - name: Push changes
-      uses: ad-m/github-push-action@master
+        packages: lilypond timidity imagemagick fonts-noto-cjk graphviz plantuml ffmpeg
+    - id: deployment
+      uses: sphinx-notes/pages@v3
       with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        branch: gh-pages
+        documentation_path: .
+        requirements_path: ./requirements.txt
+        cache: true
