--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -1,31 +1,22 @@
-name: Publish Github Pages
-
-on:
-  push:
-    branches: [master]
-    paths-ignore:
-      - .github/workflows/gitee-pages.yml
-
+name: Docs
+on: [push, pull_request, workflow_dispatch]
 jobs:
-  pages:
-    runs-on: ubuntu-20.04
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
-    permissions:
-      pages: write
-      id-token: write
+  docs:
+    runs-on: ubuntu-latest
     steps:
-    - run: |
-        sudo locale-gen en_US.UTF-8
-        sudo update-locale
-    - uses: awalsh128/cache-apt-pkgs-action@master
-      with:
-        packages: lilypond timidity imagemagick fonts-noto-cjk graphviz plantuml ffmpeg
-    - id: deployment
-      uses: sphinx-notes/pages@v3
-      with:
-        documentation_path: .
-        requirements_path: ./requirements.txt
-        cache: true
+      - uses: actions/checkout@v2
+      - uses: actions/setup-python@v2
+      - name: Install dependencies
+        run: |
+          pip install sphinx sphinx_rtd_theme
+      - name: Sphinx build
+        run: |
+          sphinx-build doc _build
+      - name: Deploy
+        uses: peaceiris/actions-gh-pages@v3
+        if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/master' }}
+        with:
+          publish_branch: gh-pages
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: _build/
+          force_orphan: true
