--- a/.github/workflows/documentation.yaml
+++ b/.github/workflows/documentation.yaml
@@ -9,6 +9,7 @@ jobs:
       - name: Install dependencies
         run: |
           pip install sphinx sphinx_rtd_theme
+          pip install -r requirements.txt
       - name: Sphinx build
         run: |
           sphinx-build AsyncPywhatKit/docs _build
