--- a/.github/workflows/documentation.yaml
+++ b/.github/workflows/documentation.yaml
@@ -12,6 +12,7 @@ jobs:
           pip install -r requirements.txt
       - name: Sphinx build
         run: |
+          cd docs
           make html
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
