--- a/.github/workflows/documentation.yaml
+++ b/.github/workflows/documentation.yaml
@@ -12,8 +12,7 @@ jobs:
           pip install -r requirements.txt
       - name: Sphinx build
         run: |
-          cd docs
-          make html
+          sphinx-build .doc doc/_build
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/master' }}
