--- a/.github/workflows/documentation.yaml
+++ b/.github/workflows/documentation.yaml
@@ -13,7 +13,7 @@ jobs:
       - name: Sphinx build
         run: |
           ls 
-          sphinx-build docs docs/_build
+          sphinx-build AsyncPywhatKit/docs docs/_build
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/master' }}
