--- a/.github/workflows/documentation.yaml
+++ b/.github/workflows/documentation.yaml
@@ -13,7 +13,9 @@ jobs:
       - name: Sphinx build
         run: |
           ls 
-          sphinx-build AsyncPywhatKit/docs docs/_build
+          cd AsyncPywhatKit/docs
+          make clean html
+          make html
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/master' }}
