--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: Deploy Sphinx documentation to Pages
 
 on:
   push:
-    branches: [master,main] # branch to trigger deployment
+    branches: [main,master] # branch to trigger deployment
   workflow_dispatch:
 
 jobs:
