--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,19 +1,25 @@
-name: Deploy Sphinx documentation to Pages
+name: Deploy
 
 on:
   workflow_dispatch:
   push:
-    branches: [main,master] # branch to trigger deployment
 
 jobs:
-  pages:
-    runs-on: ubuntu-20.04
+  run_python:
+    runs-on: ubuntu-latest
     steps:
-    - id: deployment
-      uses: sphinx-notes/pages@v3
-      with:
-        publish: false
-    - uses: peaceiris/actions-gh-pages@v3
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ${{ steps.deployment.outputs.artifact }}
+      - uses: actions/checkout@v2
+      - name: Setup Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.8
+      - name: Run Python Script
+        run: |
+          pip install sphinx sphinx_rtd_theme
+          cd AsyncPywhatKit/docs
+          sphinx-apidoc -o . ..
+          make clean html
+          make html
+          git add .
+          git commit -m "Generated documentation"
+          git push gh-pages
