--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,7 @@ jobs:
           python-version: 3.8
       - name: Run Python Script
         run: |
+          pip install -r requirements.txt
           pip install sphinx sphinx_rtd_theme
           cd AsyncPywhatKit/docs
           sphinx-apidoc -o . ..
