--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,7 @@ jobs:
           make clean html
           make html
       - name: Deploy
-        uses: peaceiris/actions-gh-pages@v2
+        uses: peaceiris/actions-gh-pages@v3
         with:
-          publish_dir: ./_build
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./build
